[gd_scene load_steps=11 format=2]

[ext_resource path="res://basicBullet.gd" type="Script" id=1]
[ext_resource path="res://images/robot_bullet.png" type="Texture" id=2]
[ext_resource path="res://images/particle.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.99429, 4.02477 )

[sub_resource type="Animation" id=2]
resource_name = "live"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1e-05, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.6, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.6, 1 )
}

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.992593 )
colors = PoolColorArray( 0.380392, 0.639216, 0.215686, 1, 0.380392, 0.639216, 0.215686, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.0443038, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0375 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.25
scale_random = 1.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 7 )

[node name="basicBullet" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1.5, 1.5, 1.5, 1 )
texture = ExtResource( 2 )

[node name="hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "live"
anims/live = SubResource( 2 )

[node name="LifeTimer" type="Timer" parent="."]

[node name="Particles2D" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( -6, 0 )
amount = 12
lifetime = 0.3
randomness = 0.45
visibility_rect = Rect2( -1000, -1000, 2000, 2000 )
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 3 )
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="die"]
